--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="conteudo-titulo">
             <img src="unlock.svg" alt="Cadeado fechado">
             <h2 class="titulo-principal">Gerador de Senhas</h2>
-            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+            <h3 class="titulo-secundario">Gere uma senha com um clique só 😃</h3>
         </header>
 
         <section class="conteudo-senha">
